--- a/src/components/widgets/Note.astro
+++ b/src/components/widgets/Note.astro
@@ -5,7 +5,7 @@ import { Icon } from 'astro-icon/components';
 <section class="bg-blue-50 dark:bg-slate-800 not-prose">
   <div class="max-w-6xl mx-auto px-4 sm:px-6 py-4 text-md text-center font-medium">
     <span class="font-bold">
-      <Icon name="tabler:info-square" class="w-5 h-5 inline-block align-text-bottom" /> Philosophy:</span
-    > Simplicity, Best Practices and High Performance
+      <Icon name="tabler:info-square" class="w-5 h-5 inline-block align-text-bottom" /> नया क्या है:</span
+    > कक्षा 1 से 5 तक सुबह और शाम के बैच के लिए प्रवेश खुले हैं
   </div>
 </section>
