--- a/src/pages/homes/saas.astro
+++ b/src/pages/homes/saas.astro
@@ -324,7 +324,7 @@ const metadata = {
       },
       {
         title: 'Call us',
-        description: '+1 (234) 567-890',
+        description: '+91-7857904210',
         icon: 'tabler:headset',
       },
       {
