--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,11 +17,11 @@ const metadata = {
   <!-- Hero Widget ******************* -->
 
   <Hero actions={[]} image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}>
-    <Fragment slot="title"> तमसो मा ज्योतिर्गमय </Fragment>
+    <Fragment slot="title"> तमसो माँ ज्योतिर्गमय </Fragment>
 
     <Fragment slot="subtitle">
       <p class="font-lg">
-        'तमसो मा ज्योतिर्गमय' का शाब्दिक अर्थ है, 'अंधकार से प्रकाश की ओर बढ़ो'. इसका मतलब यह भी है कि मुझे असत्य से
+        'तमसो माँ ज्योतिर्गमय' का शाब्दिक अर्थ है, 'अंधकार से प्रकाश की ओर बढ़ो'. इसका मतलब यह भी है कि मुझे असत्य से
         सत्य की ओर, अंधकार से प्रकाश की ओर, और मृत्यु से अमरता की ओर ले चलो. 'तमसो मा ज्योतिर्गमय' का उल्लेख मूल रूप से
         बृहदारण्यक उपनिषद में किया गया है.
       </p>
