--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const metadata = {
     <Fragment slot="subtitle">
       <p class="font-lg">
         'तमसो माँ ज्योतिर्गमय' का शाब्दिक अर्थ है, 'अंधकार से प्रकाश की ओर बढ़ो'. इसका मतलब यह भी है कि मुझे असत्य से
-        सत्य की ओर, अंधकार से प्रकाश की ओर, और मृत्यु से अमरता की ओर ले चलो. 'तमसो मा ज्योतिर्गमय' का उल्लेख मूल रूप से
+        सत्य की ओर, अंधकार से प्रकाश की ओर, और मृत्यु से अमरता की ओर ले चलो. 'तमसो माँ ज्योतिर्गमय' का उल्लेख मूल रूप से
         बृहदारण्यक उपनिषद में किया गया है.
       </p>
       <br />
