--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const metadata = {
 <Layout metadata={metadata}>
   <!-- Hero Widget ******************* -->
 
-  <Hero actions={[]} image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}>
+  <Hero actions={[]} image={{ src: '~/assets/images/hero-kids-playing.png', alt: 'AstroWind Hero Image' }}>
     <Fragment slot="title"> तमसो माँ ज्योतिर्गमय </Fragment>
 
     <Fragment slot="subtitle">
@@ -100,7 +100,7 @@ const metadata = {
       },
     ]}
     image={{
-      src: 'https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80',
+      src: '~/assets/images/nurturing-environment.jpeg',
       alt: 'Colorful Image',
     }}
   >
