--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -60,12 +60,12 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
   <div class="absolute inset-0"></div>
   <div
     class:list={[
-      'relative text-default py-3 px-3 md:px-6 mx-auto w-full',
+      'relative text-default py-3 px-3 md:px-6 mx-auto w-full flex justify-between',
       {
         'md:flex md:justify-between': position !== 'center',
       },
       {
-        'md:grid md:grid-cols-3 md:items-center': position === 'center',
+        '': position === 'center',
       },
       {
         'max-w-7xl': !isFullWidth,
